Fixes bug 66494.  Assertion in nsAutoLock.  r/sr=brendan@mozilla.org.